<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_id_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/FilterTextInput"
            android:id="@+id/category_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bottom_category_id"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/min_year_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_id_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/min_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bottom_min_year"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/max_year_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_year_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/max_year"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bottom_max_year"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.myetisir.core.ui.custom.GeneralButton
        android:id="@+id/bnt_filter_submit"
        style="@style/DialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/bottom_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_year_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>